sefkhet-abwy-chatbot/overlays/moc/route53.enc.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
    name: sefkhet-abwy-chatbot-route53
spec:
    host: sefkhet-abwy-chatbot.thoth-station.ninja
    to:
        kind: Service
        name: sefkhet-abwy-chatbot
        weight: 100
    tls:
        termination: ENC[AES256_GCM,data:LXyqXA==,iv:e6XeqqTVEqB3JkNR1qP1R7LS9FVEvgAHv4A2iA3UPII=,tag:ebUqn8KWHOM2BUcxzT0zBA==,type:str]
        certificate: ENC[AES256_GCM,data:utUdaiFXkkLx+CLiuREarm2hfDR+DjAx/Ww5x4khuvXb+aEwPWC5ScrEJg2RmX5upwOQAFSoMwixnT93kWv0ZyfCJ6GGvedHnATh739WrM0hnEqjcpALyyOlH4tz4HsNy70CD8UPKw+DSDgv1vahH1y5KFvBpYQubi+RfgRlU3Ymuu1yCjQWlNwnP7+Uc3tluIQ7kXwZe/uqkWf5KXa2/SnjV+DrWXQwdBNzqqoTiVPhQALMJfUSfu4TBwlvnCSOM7tD2V6IxMQA2FunLFUD0sJLeufcsLmRnFtWExrGEMMBPHnvSnIo7LoJn0uWDO9Gs2Pa2VjTp+noPjQct6MaaqiLi68Olcj3xwZC/NkhMyv5JkpQNDpQliFMwc0Jm7eVGr9UaAk2IOAmHAiGuTDoD35kMA+8xkvoFD9mho1sGNWpL69FNfikOmHy7KN+mo4QzqgmJ/cEGaE [...]
        key: ENC[AES256_GCM,data:7V8q9lJVRhRGrybDqYmWnWwdfMKlGfj7dGOurPFfuyyJf+rE5NMxH1mtJ1zMyVVK1298Wq1B7Yba3vUTNueGvJJBMlrLsGXSwZS61U0XKAcvyZZSPh1cT/QoKxhk4lgxDVOTmBP4vWDuhAYp37A39cbLlGplJHB6lVzp0EgmLGYgz2SpLXexjRia2n5EKiKrlTrNwmCQYnvYWQ6OPF3OAFJ5hAtlCE++TM63hkvv5FzTpja1ZfxUavYUrTzMK1bDdAWspQ6TuUebOkjefFGtJ81ZBb0y4+7Fn4G+8+KXarLvgVW9Mc0NqYSbm1GJJBXjkehSDV87iez4LC/XOcSz5klpYF2NQ1rth1YDwfgdUQV5dvjwcZfIvw67ip2mRZkXEY5RCMV9hJgiGjejOXZXbW3vCNLZMEE5CNrVfBpe04XbSWvZ48XD3NrcZBuf9XidfDWHHOC3tir79PkWgdI [...]
        caCertificate: ENC[AES256_GCM,data:6JMfLY6vKIkqqmyx+EyXohrtv0ctS0uQbEdke+ntkJe4B/afwbniWAkFbNQyay68Fq6JC0uATcH/999CcohUziqCC2dKFmlc9/fOIdJJg7ukOKdQDTgX4y/hj74hQYYS5oc2AluRJ+L11Goz0cOATUW0WPLNQXT79/5p4tmKsAtkSbxtPndQq6n8eUZ7epEwqAE8Bd6fqAr1KhaKgH4lOibSi23jI02mBaKLnjjEGRjo1Fq9Yge51VNEz1TM1Kj79sPszfK1cbqIl0cdnIcEZVnd3nK2efZVipKjJdQVjc2JzAZKM4qyIgmlXzkC39dhcq8rYrEQ4PrFCmnw7MkyOLPTDypp1xflnzyz6/izmYwO4qDl+UOPKDM19Q37B5mVIT6mpz+oJznD3B+mCdSHG9CZA1nMargJ7CAHaidudI9x4sL5VnuhSaeSS4TCgf4lXVFR99AyH [...]
    wildcardPolicy: None
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    lastmodified: '2021-09-14T20:09:51Z'
    mac: ENC[AES256_GCM,data:WNgqB5OwgrooD19a9jylyLyQr5Pne4bdtBlvdQKmBW5NIAZd0cP3VNVE1B2BE1Ls+ozHFsVKOeEOvaRzh3qcXp1TXKIa9BHzf7G/YNE4PdfcpFfWptbf7K02ySdFcs/Mr98suUwYjIxFcksLbVc44S4r82P+XORBsePNK2a7cNQ=,iv:yz2Q0c6nulHN/fI8Nyunu50LOmXGwwUcViXz000Nmvw=,tag:3X7FaS/3y6M3WcRPq4yHtA==,type:str]
    pgp:
    -   created_at: '2021-09-14T20:09:50Z'
        enc: |
            -----BEGIN PGP MESSAGE-----

            hQIMA1gbAjViyxWYAQ/+JTG1hA8doPDSq4JnoZMV0IKEajV8+T/ljMseCrY+x3FC
[...]
            =Uu6o
            -----END PGP MESSAGE-----
        fp: 34AFE2A7C8E00ED66916D95DA9FBD7DE773B2A34
    -   created_at: '2021-09-14T20:09:50Z'
        enc: |
            -----BEGIN PGP MESSAGE-----

            hQEMA+/WpawS9RPbAQf/XIPQpv3w8Q7w5gtdgwrctT9RwUf3AYRb3IqlhmrmI110
[...]
            sJs6wNCf/j7TizwsFQGRcPSvyXZVflfir+gGJ5M=
            =QW63
            -----END PGP MESSAGE-----
        fp: 87FC5D0ACF3AA48FCC029086262A80E41BCEEBF7
    -   created_at: '2021-09-14T20:09:50Z'
        enc: |
            -----BEGIN PGP MESSAGE-----

            hQEMA/irrHa183bxAQgAn0EuFKXRgR3Xe0jNxVBwal3/w5f/auhUy/cgpIbrn0pq
[...]
            P27qnKcVsR1aPpR58CRFmRtQEx9nIoVD9J33PYw=
            =oIz8
            -----END PGP MESSAGE-----
        fp: EFDB9AFBD18936D9AB6B2EECBD2C73FF891FBC7E
    -   created_at: '2021-09-14T20:09:50Z'
        enc: |
            -----BEGIN PGP MESSAGE-----

            hQIMA9aKBcudqifiAQ//cCqv1zaR62ErLEVC4nHGVywuE2quyWAn+ylvFDdHoLdn
[...]
            =bRqJ
            -----END PGP MESSAGE-----
        fp: 0508677DD04952D06A943D5B4DC4116D360E3276
    encrypted_regex: ^(data|stringData|tls)$
    version: 3.5.0
